--- a/portfolio-website/package.json
+++ b/portfolio-website/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
-    "react-tooltip": "^5.26.3"
+    "react-tooltip": "^5.26.3",
+    "@heroicons/react": "^2.1.1",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "20.11.30",
