--- a/portfolio-website/package.json
+++ b/portfolio-website/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "@next/third-parties": "^14.2.4",
     "framer-motion": "^11.0.18",
     "next": "14.1.4",
     "nodemailer": "^6.9.13",
@@ -18,7 +20,6 @@
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
     "react-tooltip": "^5.26.3",
-    "@heroicons/react": "^2.1.1",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
